# py-tree

./: README.md  setup.cfg  setup.py
docs/: Makefile
docs/source/: api_reference.rst  index.rst  installation.rst  usage.rst
package/submodule/: __init__.py
scripts/: migrate.py  read_meta_from_setup.py  readme.md
tests/: test_module.py
