[metadata]
name = my_project
version = 0.1
description = My awesome Python project
author = Your Name
author_email = your.email@example.com

[options]
packages = find:
install_requires =
    numpy>=1.18

[options.extras_require]
dev =
    pytest>=6.0
    flake8

[options.entry_points]
console_scripts =
    script_name = my_project.module:function

